# auto-ctf-solver

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EVIDENCE.md  SOLVE_DEMO.md  TOKEN_USAGE_ANALYSIS.md  terminal_log.txt
docs/screenshots/: README.md
src/auto_ctf/: __init__.py  cli.py  watcher.py
src/auto_ctf/agents/: base.py  dispatcher.py  specialists.py  triage.py
src/auto_ctf/config/: settings.py
src/auto_ctf/knowledge/: patterns.py
src/auto_ctf/tools/: common.py  docker.py  screenshot.py
src/auto_ctf/writeup/: docx_writer.py  generator.py  md_writer.py
tests/: test_patterns_coverage.py
tests/fixtures/: sample_pwn.elf
