[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "auto-ctf-solver"
version = "0.1.0"
description = "Automated CTF challenge solver with multi-agent architecture and writeup generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "python-docx>=1.0.0",
    "Pillow>=10.0.0",
    "watchdog>=4.0.0",
    "rich>=13.0.0",
    "docker>=7.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
ctf-solve = "auto_ctf.cli:solve"
ctf-watch = "auto_ctf.cli:watch"
ctf-writeup = "auto_ctf.cli:writeup"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
